# tom-utils

./: .editorconfig  .gitignore  README.md  package.json
json2struct/: json2struct.go  json2struct_test.go  utils.go
json2struct/data/: json_result.txt  test.json
openai/instruction/comment_summary_list/250508/: instruction.txt
openai/instruction/comment_summary_list/graph/: README.md  pyproject.toml
openai/instruction/comment_summary_list/graph/data/json/: test_result_4.json
openai/instruction/comment_summary_list/graph/scripts/: isort.sh  poetry.sh  run.sh  test.sh
openai/instruction/comment_summary_list/graph/src/graph/: __init__.py
openai/instruction/comment_summary_list/graph/src/graph/data_loading/: data_loader.py
openai/instruction/comment_summary_list/graph/src/graph/data_plotter/: main.py  plotter.py
openai/instruction/comment_summary_list/graph/tests/: test_data_loader.py
openai/instruction/comment_summary_list/testcase/: celebs_similarity_testset_1.json  celebs_similarity_testset_10.json  celebs_similarity_testset_2.json  celebs_similarity_testset_3.json  celebs_similarity_testset_4.json  celebs_similarity_testset_5.json  celebs_similarity_testset_6.json  celebs_similarity_testset_7.json  (+12 more)
openai/soulcracker/: assistant_analyzer.go  assistant_analyzer_integration_test.go  assistant_client.go  assistant_service.go  gpt_models.go
scripts/bybit/: get-query-order.sh  get-wallet-balance.sh  post-create-order.sh
scripts/openai/: assistant.sh  basic.sh
telegram/mike/: channel.list.txt  session.json
telegram/tom/: session.json
(+46 files in other folders)
