[project]
name = "graph"
version = "0.1.0"
description = "A Python utility for loading data and plotting graphs."
authors = [
    {name = "tom-park-io",email = "tom@krononlabs.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "numpy (>=1.26.0,<2.0.0)"
]

# Poetry가 패키지를 빌드하는 방식을 명시적으로 정의합니다.
# 'src' 디렉토리 내의 'graph' 패키지를 배열의 한 요소로 포함합니다.
[[tool.poetry.packages]]
include = "graph"
from = "src"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.isort]
profile = "black"
line_length = 88
